# Haskell-Typed-Spreadsheet-Library

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  cell.cabal  default.nix  gtk-composer.cabal  nixpkgs.json  osx.yaml  release.nix  shell.nix  stack.yaml  typed-spreadsheet.cabal
exec/: Cell.hs  Graphics.hs  Main.hs  Text.hs
nix/: typed-spreadsheet.nix
src/Control/Applicative/: Cell.hs  Updatable.hs
src/Gtk/: Composer.hs
src/Typed/: Spreadsheet.hs
