Name: gtk-composer
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Gtk-Composer-Library/issues
Synopsis: Composable GTK programs
Description: Composable GTK programs
Category: Control, Concurrency
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Gtk-Composer-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base         >= 4      && < 5   ,
        async        >= 2.0    && < 2.1 ,
        foldl        >= 1.1    && < 1.2 ,
        gtk3         >= 0.14.0 && < 0.15,
        microlens                  < 0.4,
        stm                        < 2.5,
        text                       < 1.3,
        transformers >= 0.2.0.0 && < 0.5
    Exposed-Modules: Gtk.Composer
    GHC-Options: -O2 -Wall

Executable gtk-composer-example
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Build-Depends:
        base    >= 4     && < 5   ,
        gtk-composer              ,
        text                < 1.3
    GHC-Options: -O2 -Wall -threaded
