Name: typed-spreadsheet
Version: 1.1.3
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Typed-Spreadsheet-Library/issues
Synopsis: Typed and composable spreadsheets
Tested-With: GHC == 8.0.2, GHC == 8.2.2
Description:
    This library provides a typed and composable API for building spreadsheets.
    This differs from traditional spreadsheets in a few important ways:
    .
    * you specify the relationship between inputs and outputs at compile time,
      not runtime, so that the relationship can be type-checked
    .
    * inputs of different types have different controls; for example, a `Bool`
      input creates a checkbox and a `Double` input creates a spin button
    .
    * you can only output a single value; you simulate multiple outputs by
      emitting a tuple of values
    .
    See the "Typed.Spreadsheet" module for full examples with code and pictures
Category: GUI
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Typed-Spreadsheet-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base           >= 4.9    && < 5   ,
        async          >= 2.0    && < 2.2 ,
        diagrams-cairo >= 1.3    && < 1.5 ,
        diagrams-gtk   >= 1.3    && < 1.5 ,
        diagrams-lib   >= 1.3    && < 1.5 ,
        foldl          >= 1.1    && < 1.4 ,
        gtk            >= 0.13   && < 0.15,
        microlens                   < 0.5 ,
        stm                         < 2.5 ,
        text                        < 1.3 ,
        transformers  >= 0.2.0.0 && < 0.6
    if os(darwin)
      frameworks: Cocoa
    Exposed-Modules: Typed.Spreadsheet
    GHC-Options: -O2 -Wall

Executable typed-spreadsheet-example-text
    Hs-Source-Dirs: exec
    Main-Is: Text.hs
    Build-Depends:
        base >= 4.9 && < 5  ,
        text           < 1.3,
        typed-spreadsheet
    if os(darwin)
      frameworks: Cocoa
    GHC-Options: -O2 -Wall -threaded

Executable typed-spreadsheet-example-cell
    Hs-Source-Dirs: exec
    Main-Is: Cell.hs
    Build-Depends:
        base >= 4.9 && < 5  ,
        text           < 1.3,
        typed-spreadsheet
    if os(darwin)
      frameworks: Cocoa
    GHC-Options: -Wall -threaded

Executable typed-spreadsheet-example-graphics
    Hs-Source-Dirs: exec
    Main-Is: Graphics.hs
    Build-Depends:
        base           >= 4   && < 5  ,
        diagrams-lib   >= 1.3 && < 1.5,
        typed-spreadsheet
    if os(darwin)
      frameworks: Cocoa
    GHC-Options: -O2 -Wall -threaded
